Add the ability to generate CashAddr format addresses for Bitcoin Cash use. This adds code to the firmware for generating a cashaddr address via Trezor's libraries, and updates to the core CircuitPython code for specifying the desired format.

--- a/src/module/ports/atmel-samd/Makefile
+++ b/src/module/ports/atmel-samd/Makefile
@@ -303,6 +303,7 @@ SRC_SHARED_MODULE_EXPANDED += shared-bindings/bitaddr/__init__.c \
 			      shared-module/bitaddr/bignum.c \
 			      shared-module/bitaddr/secp256k1.c \
 			      shared-module/bitaddr/ecdsa.c \
+			      shared-module/bitaddr/cash_addr.c
 
 SRC_S = supervisor/$(CHIP_FAMILY)_cpu.s
 
